--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+h1 {
+  color: white;
+}
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin: 0 auto;
+}
+nav {
+  text-align: center;
+}
+
+nav a {
+  padding: 10px 20px;
+  background-color: grey;
+  text-decoration: none;
+  color: white;
 }
